change productID to transactionID
