# services/stream_data/python-flask-server/swagger_server/models/__init__.py
@@ -3,6 +3,6 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.product_info import ProductInfo
-from swagger_server.models.product_query import ProductQuery
+from swagger_server.models.transaction_info import TransactionInfo
+from swagger_server.models.transaction_query import TransactionQuery
 from swagger_server.models.user import User
