# services/stream_data/python-flask-server/swagger_server/models/product_query.py
@@ -1,92 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server.models.user import User
-from swagger_server.models.product_info import ProductInfo
-from swagger_server import util
-
-
-class ProductQuery(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, user_info: User=None, product_info: ProductInfo=None):  # noqa: E501
-        """ProductQuery - a model defined in Swagger
-
-        :param user_info: The user_info of this ProductQuery.  # noqa: E501
-        :type user_info: User
-        :param product_info: The product_info of this ProductQuery.  # noqa: E501
-        :type product_info: ProductInfo
-        """
-        self.swagger_types = {
-            'user_info': User,
-            'product_info': ProductInfo
-        }
-
-        self.attribute_map = {
-            'user_info': 'userInfo',
-            'product_info': 'productInfo'
-        }
-
-        self._user_info = user_info
-        self._product_info = product_info
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'ProductQuery':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The ProductQuery of this ProductQuery.  # noqa: E501
-        :rtype: ProductQuery
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def user_info(self) -> User:
-        """Gets the user_info of this ProductQuery.
-
-
-        :return: The user_info of this ProductQuery.
-        :rtype: User
-        """
-        return self._user_info
-
-    @user_info.setter
-    def user_info(self, user_info: User):
-        """Sets the user_info of this ProductQuery.
-
-
-        :param user_info: The user_info of this ProductQuery.
-        :type user_info: User
-        """
-
-        self._user_info = user_info
-
-    @property
-    def product_info(self) -> ProductInfo:
-        """Gets the product_info of this ProductQuery.
-
-
-        :return: The product_info of this ProductQuery.
-        :rtype: ProductInfo
-        """
-        return self._product_info
-
-    @product_info.setter
-    def product_info(self, product_info: ProductInfo):
-        """Sets the product_info of this ProductQuery.
-
-
-        :param product_info: The product_info of this ProductQuery.
-        :type product_info: ProductInfo
-        """
-
-        self._product_info = product_info
