# services/stream_data/python-flask-server/swagger_server/models/transaction_info.py
@@ -9,16 +9,16 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class ProductInfo(Model):
+class TransactionInfo(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, topic: str=None):  # noqa: E501
-        """ProductInfo - a model defined in Swagger
+        """TransactionInfo - a model defined in Swagger
 
-        :param topic: The topic of this ProductInfo.  # noqa: E501
+        :param topic: The topic of this TransactionInfo.  # noqa: E501
         :type topic: str
         """
         self.swagger_types = {
@@ -32,32 +32,32 @@ class ProductInfo(Model):
         self._topic = topic
 
     @classmethod
-    def from_dict(cls, dikt) -> 'ProductInfo':
+    def from_dict(cls, dikt) -> 'TransactionInfo':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The ProductInfo of this ProductInfo.  # noqa: E501
-        :rtype: ProductInfo
+        :return: The TransactionInfo of this TransactionInfo.  # noqa: E501
+        :rtype: TransactionInfo
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def topic(self) -> str:
-        """Gets the topic of this ProductInfo.
+        """Gets the topic of this TransactionInfo.
 
 
-        :return: The topic of this ProductInfo.
+        :return: The topic of this TransactionInfo.
         :rtype: str
         """
         return self._topic
 
     @topic.setter
     def topic(self, topic: str):
-        """Sets the topic of this ProductInfo.
+        """Sets the topic of this TransactionInfo.
 
 
-        :param topic: The topic of this ProductInfo.
+        :param topic: The topic of this TransactionInfo.
         :type topic: str
         """
 
