# services/stream_data/python-flask-server/swagger_server/models/transaction_query.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.user import User
+from swagger_server.models.transaction_info import TransactionInfo
+from swagger_server import util
+
+
+class TransactionQuery(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, user_info: User=None, transaction_info: TransactionInfo=None):  # noqa: E501
+        """TransactionQuery - a model defined in Swagger
+
+        :param user_info: The user_info of this TransactionQuery.  # noqa: E501
+        :type user_info: User
+        :param transaction_info: The transaction_info of this TransactionQuery.  # noqa: E501
+        :type transaction_info: TransactionInfo
+        """
+        self.swagger_types = {
+            'user_info': User,
+            'transaction_info': TransactionInfo
+        }
+
+        self.attribute_map = {
+            'user_info': 'userInfo',
+            'transaction_info': 'transactionInfo'
+        }
+
+        self._user_info = user_info
+        self._transaction_info = transaction_info
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'TransactionQuery':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The TransactionQuery of this TransactionQuery.  # noqa: E501
+        :rtype: TransactionQuery
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def user_info(self) -> User:
+        """Gets the user_info of this TransactionQuery.
+
+
+        :return: The user_info of this TransactionQuery.
+        :rtype: User
+        """
+        return self._user_info
+
+    @user_info.setter
+    def user_info(self, user_info: User):
+        """Sets the user_info of this TransactionQuery.
+
+
+        :param user_info: The user_info of this TransactionQuery.
+        :type user_info: User
+        """
+
+        self._user_info = user_info
+
+    @property
+    def transaction_info(self) -> TransactionInfo:
+        """Gets the transaction_info of this TransactionQuery.
+
+
+        :return: The transaction_info of this TransactionQuery.
+        :rtype: TransactionInfo
+        """
+        return self._transaction_info
+
+    @transaction_info.setter
+    def transaction_info(self, transaction_info: TransactionInfo):
+        """Sets the transaction_info of this TransactionQuery.
+
+
+        :param transaction_info: The transaction_info of this TransactionQuery.
+        :type transaction_info: TransactionInfo
+        """
+
+        self._transaction_info = transaction_info
